# SISAP-2026-task1

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: main.yml
archive/: baseline_test.cpp  nndescent.cpp  nndescent_bitwise.cpp  nndescent_hybrid.cpp  nndescent_optimized.cpp  nndescent_rptree.cpp  nndescent_simd.cpp  nndescent_submission.cpp
docs/assets/: grid_results.csv  grid_results_phase2.csv
scripts/data_prep/: apply_pca.py  explore_data.py
scripts/evaluation/: evaluate_submission.py
scripts/plotting/: plot_advanced.py  plot_benchmarks.py  plot_comparison.py  plot_convergence.py  plot_final_architecture.py  plot_hybrid_comparison.py  plot_massive_convergence.py  plot_master_comparison.py  plot_oversampled_convergence.py  plot_pca.py  plot_phase2.py
src/: main.cpp
